objects/TimeTracking__c.object
<CustomObject>
    <description>Tracks the time for each personal account</description>
    <label>Zeiterfassung</label>
    <nameField>
        <label>Zeiterfassung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zeiterfassung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ende__c</fullName>
        <formula>Opportunity__r.Zeitbis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ende</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <formula>Opportunity__r.Zeitvon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zeiterfassung</relationshipLabel>
        <relationshipName>Zeiterfassung</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Zeiterfassung</relationshipLabel>
        <relationshipName>Zeiterfassung</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
</CustomObject>